ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <label>Applicant</label>
    <nameField>
        <label>Applicant  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>