ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Aadhar_No__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_No__c</fullName>
    <label>Aadhar No.</label>
    <length>12</length>
    <type>Text</type>
</CustomField>