ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Aadhar_OTP_or_Biometric__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_OTP_or_Biometric__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aadhar OTP or Biometric</label>
    <type>Checkbox</type>
</CustomField>