ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/ABB_as_per_Perfios__c.field-meta.xml
<CustomField>
    <fullName>ABB_as_per_Perfios__c</fullName>
    <label>ABB as per Perfios</label>
    <length>18</length>
    <type>Text</type>
</CustomField>