ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Address_Line_1_Ref_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1_Ref_1__c</fullName>
    <label>Address Line 1 Ref 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>