ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/AepS_Info__c.field-meta.xml
<CustomField>
    <fullName>AepS_Info__c</fullName>
    <label>AepS Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>