ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Agents__c.field-meta.xml
<CustomField>
    <fullName>Agents__c</fullName>
    <label>Agents</label>
    <type>TextArea</type>
</CustomField>