ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/applicant_number__c.field-meta.xml
<CustomField>
    <fullName>applicant_number__c</fullName>
    <formula>IF( ISPICKVAL(Applicant_Type__c , &quot;Borrower&quot;), &quot;B&quot;+Id , &quot;C&quot;+Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>applicant number</label>
    <type>Text</type>
</CustomField>