ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Application_Consent_OTP__c.field-meta.xml
<CustomField>
    <fullName>Application_Consent_OTP__c</fullName>
    <label>Application Consent OTP</label>
    <length>5</length>
    <type>Text</type>
</CustomField>