ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Application_Consent_Received__c.field-meta.xml
<CustomField>
    <fullName>Application_Consent_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Consent Received</label>
    <type>Checkbox</type>
</CustomField>