ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Application_Consent_SMS_Sent_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_Consent_SMS_Sent_Time__c</fullName>
    <label>Application Consent Received Time</label>
    <type>DateTime</type>
</CustomField>