ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Application_Form_SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>Application_Form_SMS_Sent__c</fullName>
    <label>Application Form SMS Sent</label>
    <type>DateTime</type>
</CustomField>