ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Are_you_registered_with_any_of_the_follo__c.field-meta.xml
<CustomField>
    <fullName>Are_you_registered_with_any_of_the_follo__c</fullName>
    <label>Are you registered with any of the follo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MCI</fullName>
            </value>
            <value>
                <fullName>ICAI</fullName>
            </value>
            <value>
                <fullName>ICWAI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>