ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Area_of_registration_only_for_MCI__c.field-meta.xml
<CustomField>
    <fullName>Area_of_registration_only_for_MCI__c</fullName>
    <label>Area of registration (only for MCI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>