ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_No__c</fullName>
    <label>Bank Account No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>