ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Beneficial_Owner_Category__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Category__c</fullName>
    <label>Beneficial Owner Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Controlling Person</fullName>
            </value>
            <value>
                <fullName>Authorised Signatory</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner cum Co-borrower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>