ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Beneficiary_Office_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Office_Address_Line_2__c</fullName>
    <label>Beneficiary Office Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>