ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Beneficiary_Office_District__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Office_District__c</fullName>
    <label>Beneficiary Office District</label>
    <length>20</length>
    <type>Text</type>
</CustomField>