ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Beneficiary_Office_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Office_Pincode__c</fullName>
    <label>Beneficiary Office Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>