ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Beneficiary_Office_State__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Office_State__c</fullName>
    <label>Beneficiary Office State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>