ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <label>BMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>