ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Borrower_Director_Specific_Relation__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Director_Specific_Relation__c</fullName>
    <label>Borrower Director Specific Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>