ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Borrower_Relation_With_IndusInd_Q2__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Relation_With_IndusInd_Q2__c</fullName>
    <label>Borrower Relation With IndusInd Q2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>