ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Borrower_SO_Relation_With_IndusInd_Q1__c.field-meta.xml
<CustomField>
    <fullName>Borrower_SO_Relation_With_IndusInd_Q1__c</fullName>
    <label>Borrower SO Relation With IndusInd Q1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>