ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/BSR_Occupation__c.field-meta.xml
<CustomField>
    <fullName>BSR_Occupation__c</fullName>
    <label>BSR Occupation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>