ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Bureau_Pull_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Pull_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bureau Pull Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>