ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Bureau_Pull_Match__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Pull_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bureau Pull Match</label>
    <type>Checkbox</type>
</CustomField>