ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Bureau_Pull_Message__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Pull_Message__c</fullName>
    <description>In this field we will store the message returned by gattingBureauPull of Apex Class.</description>
    <label>Bureau Pull Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>