ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/CASA_Consent_OTP__c.field-meta.xml
<CustomField>
    <fullName>CASA_Consent_OTP__c</fullName>
    <label>CASA Consent OTP</label>
    <length>5</length>
    <type>Text</type>
</CustomField>