ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/CASA_Consent_Received__c.field-meta.xml
<CustomField>
    <fullName>CASA_Consent_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CASA Consent Received</label>
    <type>Checkbox</type>
</CustomField>