ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/CASA_Consent_Received_Time__c.field-meta.xml
<CustomField>
    <fullName>CASA_Consent_Received_Time__c</fullName>
    <label>CASA Consent Received Time</label>
    <type>DateTime</type>
</CustomField>