ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/CASA_Form_SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>CASA_Form_SMS_Sent__c</fullName>
    <label>CASA Form SMS Sent</label>
    <type>DateTime</type>
</CustomField>