ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Caste__c.field-meta.xml
<CustomField>
    <fullName>Caste__c</fullName>
    <label>Caste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>FORWARD CASTE(FC)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>BACKWARD CASTE(BC)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>BACKWARD CASTE OTHERS(OBC)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>MOST BACKWARD CASTE (MBC)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>SCHEDULED CASTE(SC)</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>SCHEDULED TRIBE(ST)</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>OTHERS</label>
            </value>
            <value>
                <fullName>Hindu</fullName>
                <isActive>false</isActive>
                <label>Hindu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>