ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Check_CustomerDeal_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Check_CustomerDeal_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Check CustomerDeal Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>