ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Check_Eligibility_Final_Reason__c.field-meta.xml
<CustomField>
    <fullName>Check_Eligibility_Final_Reason__c</fullName>
    <label>Check Eligibility Final Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>