ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Check_Eligibility_Match__c.field-meta.xml
<CustomField>
    <fullName>Check_Eligibility_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Eligibility Match</label>
    <type>Checkbox</type>
</CustomField>