ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/CIC_No__c.field-meta.xml
<CustomField>
    <fullName>CIC_No__c</fullName>
    <description>Used to save value for CRIFF</description>
    <label>CIC No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>