ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/City_Ref_2__c.field-meta.xml
<CustomField>
    <fullName>City_Ref_2__c</fullName>
    <label>City Ref 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>