ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Co_Borrower_Reside_with_borrower__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Reside_with_borrower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co Borrower Reside with borrower</label>
    <type>Checkbox</type>
</CustomField>