ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/CoBorrower_Relation_With_Other_Bank_Q2__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Relation_With_Other_Bank_Q2__c</fullName>
    <label>CoBorrower Relation With Other Bank Q2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>