ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/CoBorrower_Required__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CoBorrower Required</label>
    <type>Checkbox</type>
</CustomField>