ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/CoBorrower_SO_Specific_Relation__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_SO_Specific_Relation__c</fullName>
    <label>CoBorrower SO Specific Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>