ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>To store Convox Agent&apos;s remarks</description>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>