ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Communication_language__c.field-meta.xml
<CustomField>
    <fullName>Communication_language__c</fullName>
    <label>Communication language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS</fullName>
                <label>ASSAMESE</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>BENGALI</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>BHADUGA</label>
            </value>
            <value>
                <fullName>BP</fullName>
                <label>BHOJPURI</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>BODO</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>CHHATTISGARHI</label>
            </value>
            <value>
                <fullName>EN</fullName>
                <label>ENGLISH</label>
            </value>
            <value>
                <fullName>GA</fullName>
                <label>GARO</label>
            </value>
            <value>
                <fullName>GU</fullName>
                <label>GUJARATI</label>
            </value>
            <value>
                <fullName>HA</fullName>
                <label>HARYANVI</label>
            </value>
            <value>
                <fullName>HI</fullName>
                <label>HINDI</label>
            </value>
            <value>
                <fullName>KA</fullName>
                <label>KANNADA</label>
            </value>
            <value>
                <fullName>KH</fullName>
                <label>KHASI</label>
            </value>
            <value>
                <fullName>KO</fullName>
                <label>KOKBOROK</label>
            </value>
            <value>
                <fullName>KN</fullName>
                <label>KONKANI</label>
            </value>
            <value>
                <fullName>MG</fullName>
                <label>MAGHI</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <label>MALAYALAM</label>
            </value>
            <value>
                <fullName>MP</fullName>
                <label>MANIPURI</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <label>MARATHI</label>
            </value>
            <value>
                <fullName>MW</fullName>
                <label>MARWARI</label>
            </value>
            <value>
                <fullName>MI</fullName>
                <label>MIZO</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>NEPALI</label>
            </value>
            <value>
                <fullName>OR</fullName>
                <label>ORIYA</label>
            </value>
            <value>
                <fullName>PU</fullName>
                <label>PUNJABI</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>SANSKRIT</label>
            </value>
            <value>
                <fullName>TA</fullName>
                <label>TAMIL</label>
            </value>
            <value>
                <fullName>TE</fullName>
                <label>TELUGU</label>
            </value>
            <value>
                <fullName>TU</fullName>
                <label>TULU</label>
            </value>
            <value>
                <fullName>UR</fullName>
                <label>URDU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>