ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Consent_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Consent_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Reminder</label>
    <type>Checkbox</type>
</CustomField>