ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Consent_Sent__c.field-meta.xml
<CustomField>
    <fullName>Consent_Sent__c</fullName>
    <label>Consent Sent</label>
    <type>DateTime</type>
</CustomField>