ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/CRIFF_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>CRIFF_Report_URL__c</fullName>
    <label>CRIFF Report URL</label>
    <type>Url</type>
</CustomField>