ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Current_Same_As_Permanent__c.field-meta.xml
<CustomField>
    <fullName>Current_Same_As_Permanent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current_Same_As_Permanent</label>
    <type>Checkbox</type>
</CustomField>