ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <label>Customer Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>