ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/customer_image_attempts__c.field-meta.xml
<CustomField>
    <fullName>customer_image_attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>customer image attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>