ProdIND/ProdPrograms/force-app/main/default/objects/Applicant__c/fields/Customer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_Name__c</fullName>
    <label>Customer Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>